// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Checkbox - renders 1`] = `
<Fragment>
  <div
    className="checkbox"
  >
    

    <input
      defaultChecked={null}
      disabled={null}
      id={null}
      type="checkbox"
    />
    

    <label
      className="d-block"
    />
    

  </div>
</Fragment>
`;

exports[`Component: Checkbox - renders checkbox group 1`] = `
<Fragment>
  <form>
    <fieldset
      className="checkbox-group"
    >
      <label
        className="checkbox-label"
      />
      <div
        className="checkbox"
        key="0"
      >
        

        <input
          defaultChecked={null}
          disabled={null}
          id="radio-example-1"
          type="checkbox"
        />
        

        <label
          htmlFor="radio-example-1"
        >
          Checkbox label
        </label>
        

      </div>
      <div
        className="checkbox"
        key="1"
      >
        

        <input
          defaultChecked={null}
          disabled={null}
          id="radio-example-2"
          type="checkbox"
        />
        

        <label
          htmlFor="radio-example-2"
        >
          Checkbox label
        </label>
        

      </div>
      <div
        className="checkbox"
        key="2"
      >
        

        <input
          defaultChecked={null}
          disabled={null}
          id="radio-example-3"
          type="checkbox"
        />
        

        <label
          htmlFor="radio-example-3"
        >
          Checkbox label
        </label>
        

      </div>
    </fieldset>
  </form>
</Fragment>
`;

exports[`Component: Checkbox - renders checkbox group with disabled state 1`] = `
<Fragment>
  <form>
    <fieldset
      className="checkbox-group"
      disabled={true}
    >
      <label
        className="checkbox-label"
      />
      <div
        className="checkbox"
        key="0"
      >
        

        <input
          defaultChecked={null}
          disabled={true}
          id="radio-example-1"
          type="checkbox"
        />
        

        <label
          htmlFor="radio-example-1"
        >
          Checkbox label
        </label>
        

      </div>
      <div
        className="checkbox"
        key="1"
      >
        

        <input
          defaultChecked={null}
          disabled={true}
          id="radio-example-2"
          type="checkbox"
        />
        

        <label
          htmlFor="radio-example-2"
        >
          Checkbox label
        </label>
        

      </div>
      <div
        className="checkbox"
        key="2"
      >
        

        <input
          defaultChecked={null}
          disabled={true}
          id="radio-example-3"
          type="checkbox"
        />
        

        <label
          htmlFor="radio-example-3"
        >
          Checkbox label
        </label>
        

      </div>
    </fieldset>
  </form>
</Fragment>
`;

exports[`Component: Checkbox - renders checkbox group with error 1`] = `
<Fragment>
  <form>
    <fieldset
      className="checkbox-group has-error"
    >
      <label
        className="checkbox-label"
      />
      <div
        className="checkbox"
        key="0"
      >
        

        <input
          defaultChecked={null}
          disabled={null}
          id="radio-example-1"
          type="checkbox"
        />
        

        <label
          htmlFor="radio-example-1"
        >
          Checkbox label
        </label>
        

      </div>
      <div
        className="checkbox"
        key="1"
      >
        

        <input
          defaultChecked={null}
          disabled={null}
          id="radio-example-2"
          type="checkbox"
        />
        

        <label
          htmlFor="radio-example-2"
        >
          Checkbox label
        </label>
        

      </div>
      <div
        className="checkbox"
        key="2"
      >
        

        <input
          defaultChecked={null}
          disabled={null}
          id="radio-example-3"
          type="checkbox"
        />
        

        <label
          htmlFor="radio-example-3"
        >
          Checkbox label
        </label>
        

      </div>
      <div
        className="help-block"
      >
        error
      </div>
    </fieldset>
  </form>
</Fragment>
`;

exports[`Component: Checkbox - renders checkbox group with groupTitle 1`] = `
<Fragment>
  <form>
    <fieldset
      className="checkbox-group"
    >
      <label
        className="checkbox-label"
      >
        Group title
      </label>
      <div
        className="checkbox"
        key="0"
      >
        

        <input
          defaultChecked={null}
          disabled={null}
          id="radio-example-1"
          type="checkbox"
        />
        

        <label
          htmlFor="radio-example-1"
        >
          Checkbox label
        </label>
        

      </div>
      <div
        className="checkbox"
        key="1"
      >
        

        <input
          defaultChecked={null}
          disabled={null}
          id="radio-example-2"
          type="checkbox"
        />
        

        <label
          htmlFor="radio-example-2"
        >
          Checkbox label
        </label>
        

      </div>
      <div
        className="checkbox"
        key="2"
      >
        

        <input
          defaultChecked={null}
          disabled={null}
          id="radio-example-3"
          type="checkbox"
        />
        

        <label
          htmlFor="radio-example-3"
        >
          Checkbox label
        </label>
        

      </div>
    </fieldset>
  </form>
</Fragment>
`;

exports[`Component: Checkbox - renders with the checked attribute 1`] = `
<Fragment>
  <div
    className="checkbox"
  >
    

    <input
      defaultChecked={true}
      disabled={null}
      id={null}
      type="checkbox"
    />
    

    <label
      className="d-block"
    />
    

  </div>
</Fragment>
`;

exports[`Component: Checkbox - renders with the disabled attribute 1`] = `
<Fragment>
  <div
    className="checkbox"
  >
    

    <input
      defaultChecked={null}
      disabled={true}
      id={null}
      type="checkbox"
    />
    

    <label
      className="d-block"
    />
    

  </div>
</Fragment>
`;

exports[`Component: Checkbox - renders with the specified id 1`] = `
<Fragment>
  <div
    className="checkbox"
  >
    

    <input
      defaultChecked={null}
      disabled={null}
      id="test"
      type="checkbox"
    />
    

    <label
      className="d-block"
      htmlFor="test"
    />
    

  </div>
</Fragment>
`;

exports[`Component: Checkbox - renders with the specified id and label 1`] = `
<Fragment>
  <div
    className="checkbox"
  >
    

    <input
      defaultChecked={null}
      disabled={null}
      id="test"
      type="checkbox"
    />
    

    <label
      className="d-block"
      htmlFor="test"
    >
      test
    </label>
    

  </div>
</Fragment>
`;
